--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css"
       rel="stylesheet"
     />
-	<link rel="stylesheet" href="/main.css">
+	<link rel="stylesheet" href="./css/main.css">
 
   </head>
   <body>
