--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <nav class="nav">
         <a href="#about" class="nav_link">ABOUT</a>
         <a href="#values" class="nav_link">VALUES</a>
-        <a href="#service" class="nav_link">SERVICE</a>
+        <a href="#services" class="nav_link">SERVICES</a>
         <a href="#aspects" class="nav_link">ASPECTS</a>
         <a href="#footer" class="nav_link">CONTACT</a>
       </nav>
@@ -57,7 +57,7 @@
         <ul class="menu_burger-list">
           <li class="menu_burger-element"><a class="menu_link" href="#about">ABOUT</a></li>
           <li class="menu_burger-element"><a class="menu_link" href="#values">VALUES</a></li>
-          <li class="menu_burger-element"><a class="menu_link" href="#service">SERVICE</a></li>
+          <li class="menu_burger-element"><a class="menu_link" href="#services">SERVICES</a></li>
           <li class="menu_burger-element"><a class="menu_link" href="#aspects">ASPECTS</a></li>
           <li class="menu_burger-element"><a class="menu_link" href="#footer">CONTACT</a></li>
         </ul>	
@@ -544,6 +544,7 @@
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script src="./js/swiper.js"></script>
   <script src="./js/menu.js"></script>
+  <script src="./js/highlightMenu.js"></script>
 
   </body>
   </html>
