--- a/index.html
+++ b/index.html
@@ -83,7 +83,10 @@
 
 
   <section class="hero light" id="hero">
-      <div class="title">VERUS PROPERTY</div>
+      <div class="title">
+        <p  class="title_p">VERUS PROPERTY</p>
+        <img src="/img/Verus_Title.png" alt="Verus Logo" class="verus_title" />
+      </div>
       <div class="grid-layout">
         <div class="item1">
           <img src="./img/img1.png" alt="Фото 1" class="hero_img">
